--- a/samples/Scrumptious/scrumptious/SCMain.storyboard
+++ b/samples/Scrumptious/scrumptious/SCMain.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="zyU-nX-A9V">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="zyU-nX-A9V">
     <dependencies>
         <deployment defaultVersion="1536" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
@@ -65,6 +65,7 @@
                     <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="continueButton" destination="Mtp-El-ZRH" id="1go-Lc-EMy"/>
+                        <outlet property="loginView" destination="y5V-Bj-YBp" id="zxJ-C2-4Wl"/>
                         <segue destination="RM5-2f-UEx" kind="modal" identifier="showMain" modalTransitionStyle="flipHorizontal" animates="NO" id="gxC-q3-0PC"/>
                     </connections>
                 </viewController>
@@ -94,10 +95,10 @@
             </objects>
             <point key="canvasLocation" x="842" y="-539"/>
         </scene>
-        <!--Taggable Friends View Controller-->
+        <!--Taggable Friend Picker View Controller-->
         <scene sceneID="Gvq-m5-ep3">
             <objects>
-                <viewController id="wf0-fR-xTE" customClass="SCTaggableFriendsViewController" sceneMemberID="viewController">
+                <viewController id="wf0-fR-xTE" customClass="FBTaggableFriendPickerViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="xB5-ou-knf"/>
                         <viewControllerLayoutGuide type="bottom" id="NrV-58-ZC7"/>
